<resources>
    <string name="app_name">Tarjeta Presentacion</string>
    <string name="cammpoNombre">Nombre:</string>
    <string name="nombre">Caros Cruz</string>
    <string name="charles_cross">Charles Cross</string>
    <string name="start">INFORMACION BASICA</string>
    <string name="campoTel">Telefono :</string>
    <string name="numero">89992199</string>
    <string name="campoCorreo">Correo</string>
    <string name="correo">orlando112000@gmail.com</string>
    <string name="campoAcerca">Acerca de mi</string>
    <string name="acerca">Soy un estudiante de ISI en la UCA que busca el equilibro entre aprender y pasar. Creo que el trabajo en equipo es un pilar para hacer algo espectacular. Presidente del aula con el objetivo de aprender sobre este. Creo que la exelencia no es un logro, es un forma de vida. Amante de los dulces, software, y cultura japonesa. Planeando fundar Cross Corporation. </string>
    <string name="unirme">Si quiere saber como formar parte de Cross Corporation.</string>
    <string name="welcome">Welcome to the true man\'s world</string>
    <string name="lema">"Un paso adelante, para llegar un paso mas lejos"</string>

</resources>
