<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="crosscorporation.presentation.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/foto"
        android:id="@+id/imageView"
        android:layout_marginStart="41dp"
        android:layout_marginBottom="258dp"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nombre"
        android:text="@string/cammpoNombre"
        android:layout_alignBaseline="@+id/name"
        android:layout_alignBottom="@+id/name"
        android:layout_alignParentStart="true"
        android:onClick="sendMessague"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/titulo"
        android:text="@string/start"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:text="@string/charles_cross"
        android:layout_marginStart="26dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/titulo"
        android:layout_toEndOf="@+id/campotel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/campotel"
        android:text="@string/campoTel"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/nombre"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tel"
        android:text="@string/numero"
        android:layout_alignBaseline="@+id/campotel"
        android:layout_alignBottom="@+id/campotel"
        android:layout_alignStart="@+id/name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/correo"
        android:text="@string/correo"
        android:layout_alignBaseline="@+id/campocorreo"
        android:layout_alignBottom="@+id/campocorreo"
        android:layout_alignStart="@+id/tel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/campocorreo"
        android:text="@string/campoCorreo"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/campotel"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/campoAcerca"
        android:text="@string/campoAcerca"
        android:layout_below="@+id/correo"
        android:layout_toEndOf="@+id/campotel"
        android:layout_marginTop="28dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/acerca"
        android:text="@string/acerca"
        android:layout_marginTop="14dp"
        android:layout_below="@+id/campoAcerca"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/unirme"
        android:text="@string/unirme"
        android:layout_alignBottom="@+id/button"
        android:layout_toEndOf="@+id/campoAcerca" />

    <Button
        android:text="UNIRME"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"

        android:layout_marginTop="23dp"
        android:layout_below="@+id/acerca"
        android:layout_toEndOf="@+id/campocorreo" />


</RelativeLayout>
